--- a/src/py/music/templates/music/lyrics.html
+++ b/src/py/music/templates/music/lyrics.html
@@ -5,13 +5,23 @@
 {% block content_block %}
 <div class="content content-lyrics">
 
+{% if is_text_browser %}
+	<nav>
+		* <a href="/{% trans 'home/' %}">{% trans 'Home' %}</a>
+		&gt; <a href="/{% trans 'music/' %}">{% trans 'Music' %}</a>
+		&gt; <a href="{{ album.get_absolute_url }}">{{ album.title }}</a>
+		&gt; <a href="{{ lyrics.song.get_absolute_url }}">{{ song_title }}</a>
+		&gt; <span>{% trans 'lyrics'|title %}</span>
+	</nav>
+	<hr>
+{% else %}
 	<nav class="breadcrumbs" aria-label="breadcrumbs">
 		<ul>
 			<li>
-				<a href="/{% trans 'home/' %}"><i class="icon fas fa-home"></i>{% trans 'Home' %}</a>
+				<a href="/{% trans 'home/' %}"><i class="fas fa-home"></i>{% trans 'Home' %}</a>
 			</li>
 			<li>
-				<a href="/{% trans 'music/' %}"><i class="icon fas fa-music"></i>{% trans 'Music' %}</a>
+				<a href="/{% trans 'music/' %}"><i class="fas fa-music"></i>{% trans 'Music' %}</a>
 			</li>
 			<li>
 				<a href="{{ album.get_absolute_url }}"><i class="fas fa-compact-disc"></i>{{ album.title }}</a>
@@ -24,6 +34,7 @@
 			</li>
 		</ul>
 	</nav>
+{% endif %}
 
 	{% comment %}Translators: Lyrics page big heading{% endcomment %}
 	<h1 class="content-heading">{% trans 'Song Lyrics' %}</h1>
