broken down the 'main' templates into smaller files

--- a/src/py/main/templates/main/pages/version.html
+++ b/src/py/main/templates/main/pages/version.html
@@ -5,7 +5,7 @@
 {% block content_block %}
 
 {% if is_text_browser %}
-	{% include "main/text-mode-menu.html" %}
+	{% include "main/components/text-header.html" %}
 {% endif %}
 
 <div class="content content-version">
