--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -66,132 +66,7 @@
 	<body class="no-player">
 
 {% if not is_text_browser %}
-		<header>
-			<div class="header-container shadow-bottom">
-
-				<div class="logo-text logo-text-left">Dimmu</div>
-
-				<div class="logo shadow-bottom">
-					<img src="{% static 'img/dimmu-saurus.svg' %}" alt="" />
-				</div>
-
-				<div class="logo-text logo-text-right">Saurus</div>
-
-				<div class="toggle-wrapper toggle-theme-wrapper no-theme">
-					<button id="theme-menu-button" class="header-button" title="{% trans 'Choose a Color Theme' %}" aria-label="{% trans 'Choose a Color Theme' %}">
-						<i class="icon fas fa-lightbulb"></i>
-						<span class="toggle-label">{% trans "Theme" %}</span>
-						<i class="fas fa-chevron-down"></i>
-					</button>
-				</div>
-
-				<div class="toggle-wrapper toggle-language-wrapper">
-					<button id="language-menu-button" class="header-button" title="{% trans 'Change the Language' %}" aria-label="{% trans 'Change the Language' %}">
-						<i class="icon fas fa-language"></i>
-						<span class="toggle-label">Language</span>
-						<i class="fas fa-chevron-down"></i>
-					</button>
-				</div>
-
-				<div class="toggle-wrapper toggle-main-menu-wrapper">
-					<button id="main-menu-button" class="header-button" title="{% trans 'Main Menu' %}" aria-label="{% trans 'Main Menu' %}">
-						<i class="icon fas fa-bars"></i>
-						<i class="fas fa-chevron-down"></i>
-					</button>
-				</div>
-
-			</div>
-
-			<div class="header-super-wrapper">
-				<div class="menu-wrapper left-menu-wrapper">
-
-					<div class="menu menu-theme-choice menu-closed shadow-bottom no-theme">
-						<ul>
-
-							<li>
-								<span class="menu-item" onclick="Theme.select(undefined);">
-									<i class="icon fas fa-desktop"></i>
-									{% trans "Device Default" %}
-								</span>
-							</li>
-
-							<li>
-								<span class="menu-item" onclick="Theme.select(0)">
-									<i class="icon fas fa-sun"></i>
-									{% trans "Bright" %}
-								</span>
-							</li>
-
-							<li>
-								<span class="menu-item" onclick="Theme.select(1)">
-									<i class="icon fas fa-moon"></i>
-									{% trans "Dark" %}
-								</span>
-							</li>
-
-						</ul>
-					</div>
-
-					<nav class="menu menu-language-choice menu-closed shadow-bottom">
-						<ul>
-
-							{% for url in language_urls %}
-								<li>
-									<a class="menu-item" href="{{ url.url }}" hreflang="{{ url.language_code }}" rel="alternate">
-										<span class="icon flag flag-{{ url.language_code }}"></span>
-										<span class="language-label">{{ url.language_name }}</span>
-									</a>
-								</li>
-							{% endfor %}
-
-						</ul>
-					</nav>
-				</div>
-
-				<div class="menu-wrapper menu-main-wrapper">
-					<nav class="menu menu-main menu-closed shadow-bottom">
-						<ul>
-							<li>
-								<a class="menu-item" href="/{% trans 'home/' %}" aria-label="{% trans 'Go to home page' %}">
-									<i class="icon fas fa-home"></i>
-									{% trans "Home" %}
-								</a>
-							</li>
-							<li>
-								<a class="menu-item" href="/{% trans 'biography/' %}" aria-label="{% trans 'Go to biography page' %}">
-									<i class="icon fas fa-book"></i>
-									{% trans "Biography" %}
-								</a>
-							</li>
-							<li>
-								<span id="music-button" class="menu-item" aria-label="{% trans 'Go to discography page' %}">
-									<i class="icon fas fa-music"></i>
-									{% trans "Music" %}
-									<i class="fas fa-chevron-down"></i>
-								</span>
-							</li>
-						</ul>
-
-						<nav class="menu menu-music menu-closed">
-							<ul>
-								<li>
-									<a class="menu-item" href="/{% trans 'music/' %}">{% trans 'All Albums' %}</a>
-								</li>
-								{% for a_info in albums %}
-								<li>
-									<a class="menu-item" href="{{ a_info.get_absolute_url }}">
-										{{ a_info.album.release_date|date:"(Y) " }}{{ a_info.title }}
-									</a>
-								</li>
-								{% endfor %}
-							</ul>
-						</nav>
-
-					</nav>
-				</div>
-			</div>
-
-		</header>
+	{% include "main/components/gui-header.html" %}
 {% endif %}
 
 		<div id="content-container">
@@ -199,131 +74,9 @@
 		</div>
 
 {% if not is_text_browser %}
-		<div class="menu-playlist-wrapper shadow-top menu-closed no-playlist">
-
-			<div class="playlist-search">
-				<input
-					aria-label="{% trans 'Song search field' %}"
-					type="text"
-					name="search-song"
-					placeholder="{% trans 'Search...' %}"
-					onkeyup="PlayerUi.handleSearch(this)">
-			</div>
-
-			<div class="menu menu-playlist">
-				<div id="no-playlist-label" class="no-playlist-label">
-					{% trans 'Playlist unavailable. Refresh the page to try again.' %}
-				</div>
-
-				<ul id="playlist-list"></ul>
-			</div>
-
-		</div>
-{% endif %}
-
-		<!-- Whitespace ruins alignment, so <a> tags had to be compressed -->
-		<footer class="shadow-top">
-
-{% if not is_text_browser %}
-			<div class="social">
-				<div class="social-label">{% trans "Follow" %}:</div>
-				<div class="social-icons">
-					{% comment %}
-					<a
-						class="bandcamp-link"
-						title="{% trans 'Dimmu Saurus Bandcamp page' %}"
-						aria-label="{% trans 'Go to Dimmu Saurus Bandcamp page' %}"
-						href="http://bandcamp.com"
-						target="_blank"
-						rel="me"><i class="fab fa-bandcamp"></i></a>
-					{% endcomment %}
-					<a
-						class="facebook-link"
-						title="{% trans 'Dimmu Saurus on Facebook' %}"
-						aria-label="{% trans 'Go to Dimmu Saurus Facebook page' %}"
-						href="https://www.facebook.com/dimmusaurus/"
-						target="_blank"
-						rel="me noopener"><i class="fab fa-facebook-square"></i></a><a
-						class="youtube-link"
-						title="{% trans 'Dimmu Saurus Youtube channel' %}"
-						aria-label="{% trans 'Go to Dimmu Saurus Youtube channel' %}"
-						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
-						target="_blank"
-						rel="me noopener"><i class="fab fa-youtube"></i></a><a
-						title="{% trans 'Dimmu Saurus Soundcloud page' %}"
-						aria-label="{% trans 'Go to Dimmu Saurus Soundcloud page' %}"
-						href="https://soundcloud.com/beeuisri12mz"
-						target="_blank"
-						rel="me noopener"><i class="fab fa-soundcloud"></i></a>
-				</div>
-			</div>
-{% endif %}
-
-			<div class="copyright">
-				<span class="copyright-copy">&copy;</span>
-				<span class="copyright-first-year">2004-</span><span class="copyright-last-year">{% now "Y" %}</span>
-				<span class="copyright-ds">Димозавър</span>
-			</div>
-		</footer>
-
-{% if not is_text_browser %}
-		<div class="player shadow-top">
-			<audio onended="Player.next()"></audio>
-			<button
-				id="pl-playlist-toggle"
-				title="{% trans 'Toggle Playlist' %}"
-				aria-label="{% trans 'Toggle Playlist' %}"
-				class="player-button playlist"><i class="fas fa-chevron-up"></i></button>
-
-				<div class="loading-indicator">
-					<div class="player-loading-spinner"></div>
-					<div class="label"></div>
-				</div>
-				<div class="track-title"></div>
-
-			<div class="track-progress-bar-container">
-				<span class="progress-time"></span>
-
-				<div class="track-progress-bar">
-					<div class="time-balloon shadow-top-small">
-						<div class="time-balloon-time-wrapper">
-							<div class="time-balloon-time"></div>
-						</div>
-						<div class="time-balloon-pointer"></div>
-					</div>
-
-					<div class="track-progress-bar-background">
-						<div class="track-progress"></div>
-					</div>
-				</div>
-
-				<span class="total-time"></span>
-			</div>
-
-			<div class="player-controls">
-				<button
-					id="pl-volume"
-					title="{% trans 'Sound Volume' %}"
-					aria-label="{% trans 'Mute/Unmute music' %}"
-					onclick="Player.toggleMute(this)"
-					class="player-button volume fas fa-volume-up"></button><button
-					id="pl-previous"
-					title="{% trans 'Previous Track' %}"
-					aria-label="{% trans 'Play previous song' %}"
-					onclick="Player.previous()"
-					class="player-button fas fa-step-backward"></button><button
-					id="pl-play"
-					title="{% trans 'Play / Pause' %}"
-					aria-label="{% trans 'Play/Pause current song' %}"
-					onclick="Player.playToggle()"
-					class="player-button fas fa-play"></button><button
-					id="pl-next"
-					title="{% trans 'Next Track' %}"
-					aria-label="{% trans 'Play next song' %}"
-					onclick="Player.next()"
-					class="player-button fas fa-step-forward"></button>
-			</div>
-		</div>
+		{% include "main/components/playlist.html" %}
+		{% include "main/components/gui-footer.html" %}
+		{% include "main/components/player.html" %}
 
 		<div class="ajax-loader">
 			<span class="spinner"></span>
