--- a/src/py/main/templates/main/pages/index.html
+++ b/src/py/main/templates/main/pages/index.html
@@ -1,12 +1,13 @@
 {% extends root_template %}
 {% load i18n %}
+{% load markdown_to_html %}
 
 {% block content_block %}
 	{% trans 'music/' as url_music %}
 	{% trans 'biography/' as url_biography %}
 
 	{% if is_text_browser %}
-		{% include "main/text-mode-menu.html" %}
+		{% include "main/components/text-header.html" %}
 	{% endif %}
 
 	<div class="content content-home">
@@ -24,6 +25,20 @@
 				</p>
 		</article>
 
-		{% include "main/news.html" %}
+		<h2 class="content-heading news-heading">{% trans "News" %}</h2>
+		{% for n in news %}
+			<article class="news">
+				<h3 class="news-title">{{ n.title }}</h3>
+				<h4 class="news-date"><i>{{ n.pub_date }}</i></h4>
+
+				{{ n.body | markdown_to_html | safe }}
+			</article>
+
+			{% if not forloop.last %} <hr> {% endif %}
+		{% empty %}
+			<p>
+				{% trans 'No news are available at this time.' %}
+			</p>
+		{% endfor %}
 	</div>
 {% endblock %}
