fixed the aria-label of the Music menu button

--- a/src/py/main/templates/main/components/gui-header.html
+++ b/src/py/main/templates/main/components/gui-header.html
@@ -99,7 +99,7 @@
 						</a>
 					</li>
 					<li>
-						<span id="music-button" class="menu-item" aria-label="{% trans 'Go to discography page' %}">
+						<span id="music-button" class="menu-item" aria-label="{% trans 'Open Discography menu' %}">
 							<i class="icon fas fa-music"></i>
 							{% trans "Music" %}
 							<i class="fas fa-chevron-down"></i>
