album title in no longer displayed twice when viewing a single album

--- a/src/css/2-pages/content-discography.css
+++ b/src/css/2-pages/content-discography.css
@@ -1,8 +1,10 @@
-/*============== Alubm title ==============*/
+/*============== Album title ==============*/
 .content-discography .album-title {
 	margin: 0;
 	text-align: center;
 }
+
+
 
 /*============== Album cover ==============*/
 .content-discography .album-contents-wrapper {
