--- a/src/css/3-screens/3-s.css
+++ b/src/css/3-screens/3-s.css
@@ -23,9 +23,12 @@
 	}
 
 	.content-discography .album-contents-wrapper {flex-flow: row;}
+	.content-discography .album-cover-wrapper {
+		margin-right: 22px;
+	}
 	.content-discography .album-cover {
 		flex-flow: row;
-		margin: 24px 22px 0 0;
+		margin: 24px 0 0 0;
 	}
 
 	.content-tune .tune-release-info {margin-bottom: 0;}
