--- a/src/py/main/templates/main/pages/languages.html
+++ b/src/py/main/templates/main/pages/languages.html
@@ -4,7 +4,10 @@
 {% block content_block %}
 
 	{% if is_text_browser %}
-		{% include "main/components/text-header.html" %}
+		<nav>
+			* <a href="/{% trans 'home/' %}">{% trans 'Home' %}</a>
+			&gt; <span>{{ page.title }}</span>
+		</nav>
 	{% endif %}
 
 	<div class="content">
