--- a/src/py/main/templates/main/pages/version.html
+++ b/src/py/main/templates/main/pages/version.html
@@ -5,7 +5,10 @@
 {% block content_block %}
 
 {% if is_text_browser %}
-	{% include "main/components/text-header.html" %}
+	<nav>
+		* <a href="/{% trans 'home/' %}">{% trans 'Home' %}</a>
+		&gt; <span>{{ page.title }}</span>
+	</nav>
 {% endif %}
 
 <div class="content content-version">
